# SoundCanvas

./: CMakeLists.txt  README.md  ROADMAP.md  STATUS.md  Summary.txt  about
Source/: CanvasComponent.cpp  CanvasComponent.h  Main.cpp  MainComponent.cpp  MainComponent.h  SoundRenderer.cpp  SoundRenderer.h  SpectralCanvasApp.h
Source/Core/: CanvasProcessor.cpp  CanvasProcessor.h  CommandQueue.h  Commands.h  ForgeProcessor.cpp  ForgeProcessor.h  ForgeVoice.cpp  ForgeVoice.h  GrainPool.cpp  GrainPool.h  ModMatrix.cpp  ModMatrix.h  PaintEngine.cpp  PaintEngine.h  ParameterBridge.h  PluginProcessor.cpp  PluginProcessor.h  SpectralProcessor.h
Source/GUI/: ArtefactLookAndFeel.cpp  ArtefactLookAndFeel.h  CanvasPanel.cpp  CanvasPanel.h  ForgePanel.cpp  ForgePanel.h  HeaderBarComponent.cpp  HeaderBarComponent.h  PluginEditor.cpp  PluginEditor.h  RetroCanvasComponent.cpp  RetroCanvasComponent.h  SampleSlotComponent.cpp  SampleSlotComponent.h
Source/docs/: ARTEFACT_Timeline_Truth.docx  DEVJOURNAL.md  WORKFLOW.md
